--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends":  "face-tryon-typescript-config/vite.json",
   "compilerOptions": {
     "baseUrl": "./src",
     "rootDir": "./src",
